[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-downloader-mcp"
version = "0.1.0"
description = "MCP server that gives agents video downloading capabilities across 1000+ sites"
authors = [
    {name = "Claude Code Assistant"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.2.0",
    "yt-dlp>=2023.1.6",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "mypy",
    "pytest",
]

[project.scripts]
video-downloader-mcp = "video_downloader_mcp.server:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100